# OpenGL_breakout

./: :w  CMakeLists.txt  ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  main.cpp  particle_generator.cpp  particle_generator.h  post_processor.cpp  post_processor.h  power_up.h  resource_manager.cpp  resource_manager.h  shader.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
.cache/clangd/index/: ball_object.cpp.D86A573BEF0B65E2.idx  ball_object.h.864A6A2773367423.idx  game.cpp.27AB1A3075C8CB30.idx  game.h.BD9367B3E362A577.idx  game_level.cpp.825D438FA99BD1D4.idx  game_level.h.DB272E124149F9F9.idx  game_object.cpp.AFE1F3E519C31F3A.idx  game_object.h.9EF2D2A52CB7B9E6.idx  glad.c.14C7F2B3F44D8C05.idx  glad.h.0BDB8424A2D3EDE5.idx  ik_ESoundEngineOptions.h.64BB325BBB8FB948.idx  ik_ESoundOutputDrivers.h.01B776721BC3727E.idx  ik_EStreamModes.h.5DFA7816992B274C.idx  ik_IAudioRecorder.h.149440BE442C21D5.idx  ik_IAudioStream.h.DF589965ADE36864.idx  ik_IAudioStreamLoader.h.C3C77ACFAEE48FD1.idx  ik_IFileFactory.h.FFBDC53544AA5040.idx  ik_IFileReader.h.CF588FA2BA007D9F.idx  ik_IRefCounted.h.193023DF15DFFF92.idx  ik_ISound.h.3E1F91556605818A.idx  ik_ISoundDeviceList.h.C7CDEAA29473D552.idx  ik_ISoundEffectControl.h.17DED2218F656906.idx  ik_ISoundEngine.h.D9E1C94A426BB0E5.idx  (+26 more)
shaders/: f_particle.glsl  f_post_processing.glsl  f_sprite.glsl  f_test_shader.glsl  v_particle.glsl  v_post_processing.glsl  v_sprite.glsl  v_test_shader.glsl  v_text_shader.glsl
